# rpm-version

./: .gitignore  CHANGELOG.md  Cargo.toml  PYTHON_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: compare_versions.rs  serde.rs
examples/python/: compare_versions.py
src/: lib.rs  python.rs
tests/python/: test_evr.py  test_requirement.py
