[package]
name = "rpm-version"
version = "0.1.0"
edition = "2024"
description = "A library for dealing with RPM versions (NEVRA, EVR) correctly."
license = "MIT"
authors = [
    "Daniel Alley <dalley@redhat.com>"
]

[dependencies]
pyo3 = { version = "0.28", optional = true }

[features]
default = []
python = ["pyo3/extension-module", "pyo3/abi3-py310"]
